--- a/reactive/pom.xml
+++ b/reactive/pom.xml
@@ -72,7 +72,7 @@
                 <version>2.8.0</version>
                 <configuration>
                     <to>
-                        <image>gcr.io/${name}/${version}</image>
+                        <image>gcr.io/${name}/latest:v1</image>
                     </to>
                 </configuration>
             </plugin>
