--- a/externalized.properties/deploy/demo-deployment.yaml
+++ b/externalized.properties/deploy/demo-deployment.yaml
@@ -12,37 +12,46 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: extranalized-spring-configration
+    app: load-balancer-extranalized-spring-configration
   name: extranalized-spring-configration
 spec:
-  containers:
-    - image: gcr.io/externalized-properties/latest:v1
-      name: extranalized-spring-configration
-      imagePullPolicy: IfNotPresent
-      env:
-        - name: app.port
-          value: "8080"
-        - name: app.profile
-          valueFrom:
-            configMapKeyRef:
-              name: spring-config
-              key: tenant
-        - name: organization.name
-          valueFrom:
-            configMapKeyRef:
-              name: spring-config
-              key: tenant
-        - name: organization.title
-          valueFrom:
-            configMapKeyRef:
-              name: spring-config
-              key: title
-        - name: organization.contact
-          valueFrom:
-            configMapKeyRef:
-              name: spring-config
-              key: contact
-  restartPolicy: Never
+  replicas: 2
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: load-balancer-extranalized-spring-configration
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: load-balancer-extranalized-spring-configration
+  spec:
+    containers:
+      - image: gcr.io/externalized-properties/latest:v1
+        name: extranalized-spring-configration
+        imagePullPolicy: IfNotPresent
+        env:
+          - name: app.port
+            value: "8080"
+          - name: app.profile
+            valueFrom:
+              configMapKeyRef:
+                name: spring-config
+                key: tenant
+          - name: organization.name
+            valueFrom:
+              configMapKeyRef:
+                name: spring-config
+                key: tenant
+          - name: organization.title
+            valueFrom:
+              configMapKeyRef:
+                name: spring-config
+                key: title
+          - name: organization.contact
+            valueFrom:
+              configMapKeyRef:
+                name: spring-config
+                key: contact
+
 
 #---
 #apiVersion: v1
