--- a/externalized.properties/deploy/demo-deployment.yaml
+++ b/externalized.properties/deploy/demo-deployment.yaml
@@ -28,9 +28,9 @@ spec:
         - image: gcr.io/externalized-properties/latest:v1
           name: extranalized-spring-configration
           imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 9090
           env:
-            - name: app.port
-              value: "8000"
             - name: app.profile
               valueFrom:
                 configMapKeyRef:
