--- a/externalized.properties/deploy/demo-deployment.yaml
+++ b/externalized.properties/deploy/demo-deployment.yaml
@@ -18,11 +18,11 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      app.kubernetes.io/name: load-balancer-extranalized-spring-configration
+      name: load-balancer-extranalized-spring-configration
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: load-balancer-extranalized-spring-configration
+        name: load-balancer-extranalized-spring-configration
     spec:
       containers:
         - image: gcr.io/externalized-properties/latest:v1
