Spring boot externalized application configuration

--- a/externalized.properties/src/main/resources/application.yaml
+++ b/externalized.properties/src/main/resources/application.yaml
@@ -1,7 +1,9 @@
+server:
+  port: 9090
 spring:
   config:
     activate:
-      on-profile: ${app.profile}
+      on-profile: abc
 tenant:
   name: ${organization.name}
   title: ${organization.title}
