Spring boot externalized application configuration

--- a/reactive/deploy/pod-spring-config-map.yaml
+++ b/reactive/deploy/pod-spring-config-map.yaml
@@ -10,7 +10,8 @@ spec:
       name: spring-config-map
       ports:
         - containerPort: 8080
-      imagePullPolicy: IfNotPresent
+      imagePullPolicy: Always
+      command: [ "/bin/sh", "-c", "env" ]
       env:
         - name: SPRING_PROFILE
           value: dev
